Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Use accounting date to format invoice number
* Add invoice payment method
* Show number and reference in invoice rec_name
* Remove support for Python 2.7
* Use today as fallback for invoice date report

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Show invoice payment on Move Line
* Remove payment lines which actually do not pay the Invoice
* Ensure payment lines are linked to only one Invoice
* Ensure payments on Invoice does not exceed invoice amount
* Add methods to add and remove payments on Invoice
* Check pending invoice to erase party
* Add invoice usage to party's contact mechanisms
* Show reconciled date on invoice
* Make description on invoice line optional

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Use tax sequence as default value for invoice taxes sequence
* Add party tax identifier on invoice

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Use Match pattern for invoice sequences

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Add tax identifier on invoice
* Rename Invoice.create_move to get_move
* Rename InvoiceLine and InvoiceTax get_move_line to get_move_lines
* Change Invoice.set_number into classmethod
* Return original amount sign on fixed payment terms
* Add configuration option to store invoice report cache in filestore
* Manage readonly state on Invoice Line and Tax Line
* Rename account.invoice.payment_term.line.relativedelta
  into account.invoice.payment_term.line.delta
* Make payment term not required

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Merge invoice and credit note
* Inversed sign of tax report from credit note
* Move tax Rounding configuration to account
* Add Python3 support
* Change payment term percentage into ratio

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)